v0.6.1/README.md
# Quantum Continued.
<div align="center">
  <br />
  <p>
    <a href="https://discord.gg/Qet7KXxRZj"><img src="https://github.com/fan4145/quantum-client/blob/main/src/main/resources/Quantum.png?raw=true" width="225" alt="Quantum" /></a>
  </p>
  <br />
Quantum Changelogs: <br> <br>
  
  <details> <br>
  <summary>0.6.1 Changelog:</summary> <br>
    -added pingspoof <br>
    -added coordleaker <br>
    -added broken fastswim <br>
    -added autoreply <br>
    -new lawnmower <br>
    -added chinese automine <br>
    -added antiafk <br>
    -added xcarry <br>
    -added auto eat <br>
    -added boatfly <br>
    -added wip 2b ca <br>
    -added wip click gui <br>
    -added suicide <br>
    -added nuker <br>
  </details> <br>
  
  <details> <br>
  <summary>0.6.0 Changelog:</summary> <br>
 Added tracers - derpyjibs <br>
 HUGGGGGGGGGGGGGGGGGGGEEEEEEEEEEEEEEEEEE code cleanup. - Perry. <br>
 added autofish - derpyjibs & noat <br>
 bad stashlogger - derpyjibs & noat <br>
 added velocity <br>
-Added jesus <br>
-Added mobowner (wip) <br>
-Added control efly (wip) <br>
-Added stashlogger (wip)<br>
-Added tracers <br>
-Added tracjectories <br>
-Added autoreconnect <br>
-Added autolog <br>
-Added automine (wip) <br>
-Added yaw (wip) <br>


</details> <br>


<details> <br>
  <summary>0.5.2 Changelog:</summary> <br>
Changed RPC to 0.5.2. -derpyjibs and noat. <br>
Added snine mode. -noat. <br>
Fixed FakePlayer. -derpy and noat. <br>
Fixed VisualRange. -derpy and noat. <br>
Added Strafe that doesn't work. -derpy and noat. <br>
Fixed a lot of possible crashes. -perry. <br>
Import Cleanup. -perry. <br>
AntiHunger. -perry. <br>
Cleaned up modules. -perry. <br>
Sexy Readme update. -perry. <br>
CSGO Watermark - noat. (don't grammar police me please) <br>
EntityNotifier. -perry. <br>
yPort/Vanilla Speed. -perry. <br>
NoteBot. -perry. <br>
ShulkerAura -pasted on behalf of TuxISCool <br>
</details> <br>

<details> <br>
  <summary>0.5.1 Changelog:</summary> <br>
newest commit: <br>
base changed to Quantum <br>
Current list of new things added and changed: <br>
AutoWalk <br>
Sprint <br>
New base <br>
Removed useless placeholders <br>
New gui <br>
Changed rpc to 0.5.1 <br>
Added xray <br>
</details> <br>

<details> <br>
  <summary>0.5.0 Changelog:</summary> <br>
Scaffold - noatmc<br>
scaffold fix - noatmc<br>
godmodule but better - noatmc<br>
step - noatmc<br>
port phobos ac - ProfKambing<br>
burrow - noatmc<br>
discord rpc - fan4145 + ProfKambing<br>
scaffold - noatmc<br>
penis esp - ProfKambing<br>
godmodule - noatmc<br>
velocity - noatmc <br>
</details> <br>
